// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayLists Should display the returned lists. 1`] = `
<div>
  <h3>Lists</h3>
  <div class="list">
    list name 1
    list id 1
  </div>
  <div class="list">
    list name 2
    list id 2
  </div>
</div>
`;

exports[`DisplayLists Should render. 1`] = `
<div>
  <h3>Lists</h3>
</div>
`;
